// Copyright (C) Kacianoki - All Rights Reserved 
//  
//  This source code is protected under international copyright law.  All rights 
//  reserved and protected by the copyright holders. 
//  This file is confidential and only available to authorized individuals with the 
//  permission of the copyright holders.  If you encounter this file and do not have 
//  permission, please contact the copyright holders and delete this file.

syntax = "proto3";

option csharp_namespace = "TCPLib.Protobuf";

enum Code {
	OK = 0;
    BADRESPONSE = 1;
    SERVERISFULL = 2;
    DIFFERENTVERSIONS = 3;
    TIMEOUT = 4;
    SERVERERROT = 5;
    SERVERSHUTDOWN = 6;
    BLOCKED = 7;
    KICKED = 8;
}
message KickMessage {
	optional string reason = 1;
    Code code = 2;
}

message RespondCode {
	Code code = 1;
}